# commi

./: .codespellrc  .gitignore  Makefile  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  ruff.toml  setup.cfg  tsconfig.eslint.json  tsconfig.json  tsup.config.ts
commi/: PROMT.md  __init__.py  __main__.py  cli.py  constants.py  exceptions.py  git_utils.py  llm.py
src/: cli.ts  git.ts  index.ts  llm.ts  message.ts  prompt.ts
tests/: test_cli.py  test_llm.py  test_one_is_one.py
