[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "commi"
version = "0.0.1"
description = "Creates an AI-Powered commit messages"
authors = [
    "Timur Valiev <cptchunk@yandex.ru>"
]
license = "MIT"
readme = "README.md"

classifiers = [
  "Development Status :: 3 - Alpha",  # TODO
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

homepage = "https://github.com/imtoopunkforyou/commi"

keywords = [
]  # TODO

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.24.2"

[dependency-groups]
lint = [
    "ruff (>=0.15.12,<0.16.0)",
    "wemake-python-styleguide (>=1.6.1,<2.0.0)",
    "flake8-digit-separator (>=1.0.6,<2.0.0)",
    "codespell (>=2.4.2,<3.0.0)",
    "pymarkdown (>=0.1.4,<0.2.0)",
    "mypy (>=1.20.2,<2.0.0)"
]
tests = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-sugar (>=1.1.1,<2.0.0)"
]
